# lemonpos

./: CMakeLists.txt
dataAccess/: azahar.cpp  azahar.h  upgrade.cpp  upgrade.h  upgrade.ui
database_resources/: create.sql  emporium_data.sql  lemon_mysql.sql
images/: CMakeLists.txt
mibitWidgets/: mibitlineedit.cpp  mibitlineedit.h
printing/: print-cups.cpp  print-cups.h
squeeze/src/: CMakeLists.txt  clienteditor.cpp  clienteditor.h  clienttag.cpp  clienttag.h  donoreditor.cpp  donoreditor.h  limiteditor.cpp  limiteditor.h  offersdelegate.cpp  offersdelegate.h  productView.cpp  productView.h  producteditor.cpp  producteditor.h  productinfo.cpp  productinfo.h  promoeditor.cpp  promoeditor.h  purchaseeditor.cpp  purchaseeditor.h  searchcode.cpp  searchcode.h  squeeze.cpp  squeeze.kcfg  squeezeui.rc  squeezeview.cpp  squeezeview.h  statistics.cpp  statistics.h  transactions.cpp  transactions.h  usereditor.h  usersdelegate.cpp  usersdelegate.h
squeeze/src/po/: ca.po  cz.po  de.po  es.po  fr.po  it.po  pt_BR.po  squeeze.pot  zh.po
squeeze/src/ui/: clienttag.ui  editclient_widget.ui  editdonor_widget.ui  limiteditor.ui  prefs_db.ui  productView.ui  producteditor.ui  productinfo.ui  purchaseeditor.ui  searchcode.ui  squeezeview_base.ui  statistics.ui  transactions.ui
squeeze/style/simple/: simple.qss
src/: CMakeLists.txt  enums.h  inputdialog.cpp  inputdialog.h  lemon.cpp  lemon.kcfg  lemonview.cpp  lemonview.h  loginwindow.cpp  main.cpp  pricechecker.cpp  resume.cpp  specialordereditor.cpp  structs.h  ticketpopup.cpp
src/po/: ca.po  cz.po  de.po  es.po  fr.po  it.po  lemon.pot  zh.po
src/ui/: mainview.ui
styles/: CMakeLists.txt
styles/elegant/: CMakeLists.txt
styles/portobello/: CMakeLists.txt  Makefile  cmake_install.cmake  elegant.qss
styles/simple/: CMakeLists.txt  simple.qss
